<resources>
    <string name="app_name">Shoe Store Inventory</string>
    <string name="login_header">The Purple Store Inventory</string>
    <string name="enter_email_label">Enter email</string>
    <string name="enter_password_label">Enter password</string>
    <string name="email_label">Login with email</string>
    <string name="password_label">Password</string>
    <string name="login_button">Login</string>

    <!--    welcome screen-->
    <string name="welcome_label">Welcome to\nThe Purple Store inventory!</string>
    <string name="welcome_subheading_label">Shoes for every terrain</string>
    <string name="dirty_design_credits">purple design by Rod Mesquita\nfor Udacity nanodegree</string>
    <string name="onboarding_explore_label">Explore!</string>

    <!--    instructions -->
    <string name="instructions_heading">Instructions</string>
    <string name="step_1">Step 1 - Review Existing Items</string>
    <string name="step_2">Step 2 - Click (+) to Add Shoe</string>
    <string name="step_3">Step 3 - Add New Product &amp; Save</string>
    <string name="instructions_button_label">Get Started</string>

    <!--   inventory list screen -->
    <string name="logout">Logout</string>
    <string name="add_shoe_label">Add shoe</string>

    <!--    shoe detail screen-->
    <string name="shoe_detail_heading_label">Add New Shoe</string>
    <string name="cancel_new_shoe">Cancel</string>
    <string name="save_shoe">Save</string>
    <string name="size_label">Size</string>
    <string name="brand_label">Brand</string>
    <string name="description_label">Description</string>
    <string name="name_label">Name</string>

    <!--    shoe detail screen hints-->
    <string name="enter_shoe_name">Enter shoe name</string>
    <string name="enter_shoe_size">Enter shoe size</string>
    <string name="enter_shoe_brand">Enter shoe maker</string>
    <string name="enter_brief_description">Enter brief description</string>

</resources>
