<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginFragment">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.login.LoginViewModel" />
    </data>

    <!--
        *** text colors set to Dark to enhance visibility with higher contrast ratio on white background.
        *** layout set to vertical chain with CHAIN_PACKED style for clean look on landscape and portrait.
    -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_header"
            android:textColor="@color/darkText"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEmailLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textColor="@color/darkText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/editEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/textViewHeader"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/editEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/enter_email_label"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/darkText"
            app:layout_constraintBottom_toTopOf="@+id/textViewPwdLabel"
            app:layout_constraintStart_toStartOf="@+id/textViewPwdLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewEmailLabel" />

        <TextView
            android:id="@+id/textViewPwdLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/password_label"
            android:textColor="@color/darkText"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/enter_password_label"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/darkText"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textViewPwdLabel" />

        <!--
            *** button text color set to white for higher contrast on purple background.
        -->
        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/onboarding_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/purple_300"
            android:onClick="@{() -> loginViewModel.onLoginPressed()}"
            android:text="@string/login_button"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
