<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OnboardingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--
            *** The first TextView works as the anchor for the views below.
            *** TextViews are organized to be centered vertically.
        -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/welcome_label"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/welcome_subheading_label"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dirty_design_credits"
            android:textColor="@color/darkText"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <!--
            *** button text color set to white for higher contrast on purple background.
        -->
        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/onboarding_button_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/onboarding_explore_label"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:background="@color/purple_300"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>